add metas and position to socials media

--- a/public/index.html
+++ b/public/index.html
@@ -5,11 +5,12 @@
     <link rel="icon" href="%PUBLIC_URL%/javascript.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <meta name="theme-color" content="#000000" />
+    <meta name="author" content="Enzo Frias Borda" />
     <meta
       name="description"
-      content="web developer portfolio"
+      content="web developer portfolio. Presupuestos. Desarrollo. "
     />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
+    <link rel="Enzo-icon" href="%PUBLIC_URL%/logoEnzo.png" />
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
     <title>Enzo Frias Borda</title>
   </head>
